# NursesWorkSchedule

./: README.md  file.txt  test.txt  testfile.txt
.github/workflows/: CodeCoverage.yml  FirstCppRunner.yml  c-cpp.yml
NursesWorkSchedule/: CMakeLists.txt  CMakeLists.txt~RF8fec95d.TMP  ScheduleCreatorTest.cpp  csvfilereader.cpp  csvfilereader.h  csvfilewriter.cpp  csvfilewriter.h  csvholidaysparser.cpp  csvholidaysparser.h  csvnursesparser.cpp  csvnursesparser.h  csvnursesreader.cpp  csvnursesreader.h  csvparser.cpp  csvparser.h  csvstaffparser.cpp  csvstaffparser.h  currentDateTest.cpp  currentdate.cpp  currentdate.h  fileReaderTest.cpp  fileWriterFileReaderTest.cpp  filereader.h  filewriter.h  holiday.cpp  holiday.h  holidayParserTest.cpp  holidays.csv  io.h  main.cpp  mainio.cpp  mainio.h  nurse.cpp  nurse.h  nurseInterface.h  nurses.csv  nursesfiletest.csv  nursesinterface.h  parser.h  pielegniarki.csv  (+11 more)
NursesWorkSchedule/include/prompt/: parser.h  procedure.h  procedureconsole.cpp  procedureconsole.h  storage.cpp  storage.h  wordsparser.cpp  wordsparser.h
build-NursesWorkSchedule-Desktop_Qt-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  NursesWorkSchedule.ilk  NursesWorkScheduleTest.ilk  NursesWorkScheduleTest[1]_include.cmake  NursesWorkScheduleTest[1]_tests.cmake  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-NursesWorkSchedule-Desktop_Qt-Debug/.cmake/api/v1/reply/: cache-v2-f8d3dd38fbc9442d1b3a.json  cmakeFiles-v1-5277f6b40a8bbb3c3367.json  codemodel-v2-e559a9928633302be6ef.json  directory-.-Debug-19ee994be89d82fe2c24.json  directory-_deps.googletest-build-Debug-518b39406172266a6b36.json  directory-_deps.googletest-build.googlemock-Debug-fb3072172c62027596ab.json  directory-_deps.googletest-build.googletest-Debug-920d4f6b35bba0b907cf.json  index-2023-12-28T06-53-45-0704.json  target-NursesWorkSchedule-Debug-8d078bb4448411438e0f.json  target-NursesWorkScheduleTest-Debug-676274f3302693fcf259.json  target-gmock-Debug-c9ba3155196943d258ec.json  target-gmock_main-Debug-8bcd33a805f185e014f1.json  target-gtest-Debug-c6cba40b2692537f8ce6.json  target-gtest_main-Debug-f09965e47380bb728c24.json
build-NursesWorkSchedule-Desktop_Qt-Debug/.qtc_clangd/: compile_commands.json
build-NursesWorkSchedule-Desktop_Qt-Debug/.qtc_clangd/.cache/clangd/index/: WinUser.h.51A0B9180634B30E.idx  Windows.h.D7D23859A52B5FFA.idx  __msvc_bit_utils.hpp.07830EDFB44FE56A.idx  __msvc_chrono.hpp.DF626E0D5FF0CCBA.idx  __msvc_filebuf.hpp.70DA476F858D33A8.idx  algorithm.347731C69E72739E.idx  any.6FE0B6ECD064AF0F.idx  array.3051D6EA1C3EFC67.idx  atomic.1190DEDFD0C0738F.idx  cassert.60EFD4C2D0AF266F.idx  chrono.2314473049A908C7.idx  cmath.342F79D6D7FFAF9B.idx  combaseapi.h.3A96289AF9BE1D5F.idx  commdlg.h.AC39C67085DA238E.idx  condition_variable.C5963AED3B900A25.idx  corecrt_io.h.F81D43DC282E3E43.idx  corecrt_memcpy_s.h.AE9308F5D30CC539.idx  corecrt_memory.h.945ED66222BE3A38.idx  corecrt_wstring.h.D8C73DDD41C34C58.idx  cstddef.9990360ED0261615.idx  cstring.123313593D65BC21.idx  csvfilereader.cpp.AC081AE8AE6A4CEB.idx  csvfilereader.h.D6E7B855F876CE8F.idx  csvfilewriter.cpp.B830039109C824CA.idx  csvfilewriter.h.38D1E4579F2433D0.idx  csvnursesparser.cpp.9DD76F41420113C9.idx  csvnursesparser.h.8BB87EE0F737E306.idx  csvparser.cpp.CF8E3B8AE1E8BE76.idx  csvparser.h.65BD91D69F1243F6.idx  ctime.D896BECB11201FF1.idx  cwchar.44768322DF8058B1.idx  direct.h.9CDA9E82F0717DBD.idx  driverspecs.h.2E4827C5A3EB1604.idx  exception.1557E9E47E06D647.idx  excpt.h.7D328212842DBF50.idx  filereader.h.C500456FA6D46D41.idx  filewriter.h.B8E624E8AF405018.idx  fstream.5C972D53851709FD.idx  functional.BAA2E6536B54B847.idx  gmock-actions.h.04BD42DC7F5FB68A.idx  (+149 more)
build-NursesWorkSchedule-Desktop_Qt-Debug/lib/: gtest_main.lib
build-NursesWorkSchedule-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  pielegniarki.csv  qtcsettings.cmake  something.csv
build-NursesWorkSchedule-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-92c92fc2e924b0ca6e90.json  cmakeFiles-v1-0113cb9ea0e486f869a8.json  cmakeFiles-v1-d0aa439cdb4b9fae255e.json  cmakeFiles-v1-f1da339d164f729a8b2d.json  codemodel-v2-0158c90611493caf44e5.json  codemodel-v2-3f090e02956a7b632722.json  codemodel-v2-401acb72ad6296af88a5.json  codemodel-v2-7d8cc658771c7bd45736.json  codemodel-v2-a256245c42983d69dfba.json  codemodel-v2-d4345b611d311fc8ecfb.json  codemodel-v2-f42179dcb37c244a4b2e.json  directory-.-Debug-0635c961ae4d469a3d8e.json  directory-.-Debug-1409e753c104c89e7da8.json  directory-.-Debug-3f0620d173af92e1978d.json  directory-.-Debug-51de8e2b6e761cf13752.json  directory-.-Debug-848a5d446a8b090eb3f8.json  directory-.-Debug-d8a846c5b3a66800e747.json  index-2023-12-20T15-43-47-0141.json  index-2023-12-20T19-47-37-0162.json  index-2023-12-21T19-03-44-0547.json  index-2023-12-27T11-26-30-0715.json  index-2023-12-27T14-47-19-0991.json  index-2023-12-28T17-36-45-0919.json  (+8 more)
build-NursesWorkSchedule-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-ff63bcc4567ff1fa4a1b.json  codemodel-v2-0db84fc408eabd5082d8.json  codemodel-v2-20c0973120d914fb64c7.json  codemodel-v2-adb681f6d2a298752a3f.json  codemodel-v2-ea7c70adfde99ffb1efb.json  codemodel-v2-fbce588da42a432a2c2e.json  directory-.-Debug-49a7d760e89b9b34bcd6.json  directory-.-Debug-61a332765dd502bc2f2e.json  directory-.-Debug-6f4d8f113799767f9120.json  directory-.-Debug-bcc11dc28bc7c5aff4a7.json  index-2023-12-20T19-47-06-0468.json  index-2023-12-21T19-01-42-0488.json  index-2023-12-27T11-26-20-0993.json  index-2023-12-27T14-43-38-0422.json  index-2023-12-28T17-36-19-0179.json  target-NursesWorkSchedule-Debug-09212c500b91ad6923d9.json  target-NursesWorkSchedule-Debug-0c76f43b31d081f29b46.json  target-NursesWorkSchedule-Debug-36c84a6217414be8ff0c.json  target-NursesWorkSchedule-Debug-6ff91f31544214fc7685.json  target-NursesWorkSchedule-Debug-dcd4236e4d8048bce22e.json
build-NursesWorkSchedule-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+76 files in other folders)
